--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 virtual/
+venv/
 # Created by https://www.toptal.com/developers/gitignore/api/flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask
 
